# TradeRecon_Ops

./: README.md  pnpm-lock.yaml  pyproject.toml
Screenshots/: README.md
artifacts/api-server/: ai_service.py  database.py  fx_service.py  main.py  reconciliation_engine.py  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/routes/: ai_routes.py  dashboard.py  demo.py  fx.py  reconcile.py  reports.py  results.py  upload.py
artifacts/api-server/sample_data/: bank_statement_cleaner.csv  bank_statement_high_risk.csv  fx_rates.csv  internal_ledger_cleaner.csv  internal_ledger_high_risk.csv
artifacts/trade-recon-ops/: index.html  package.json
artifacts/trade-recon-ops/.replit-artifact/: artifact.toml
artifacts/trade-recon-ops/src/: App.tsx  index.css
artifacts/trade-recon-ops/src/components/: layout.tsx
artifacts/trade-recon-ops/src/pages/: ai-insights.tsx  dashboard.tsx  report.tsx  results.tsx  upload.tsx
lib/api-spec/: openapi.yaml
